# hashcode

./: .gitignore  Model.cs  README.md
2021/: README.md
2021/cpp/results/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt
2021/cpp/src/: car.hpp  fwd.hpp  main.cpp  model.hpp  random_generator.hpp  signaling.hpp  simulator.cpp  simulator.hpp  solution.cpp  street.cpp  (+2 more)
2021/csharp/: HashCode.csproj  Logger.cs  Parameters.cs
2022/: README.md
2022/cpp/: CMakeLists.txt
cpp/: CMakeLists.txt  rsult.c.txt
cpp/results/: b.txt  c.txt  d.1597237.txt  d.txt  e.txt  f.txt
cpp/src/: car.cpp  car.hpp  fwd.hpp  hello.cpp  hello.hpp  intersection.cpp  intersection.hpp  main.cpp  model.cpp  model.hpp  random_generator.cpp  result.cpp  result.hpp  signaling.cpp  signaling.hpp  simulator.cpp  simulator.hpp  solution.cpp  solution.hpp  street.cpp  street.hpp  timer.cpp  timer.hpp  traffic_light.cpp  traffic_light.hpp  traffic_signaling.cpp  traffic_signaling.hpp
csharp/: HashCode.csproj  Logger.cs  Model.cs  ModelLoader.cs  Parameters.cs  Program.cs  Schedule.cs  Simulator.cs  outputExample.txt
csharp/findings/: a_Score_2000_2021_03_07_20_54.txt  b_Score_4565653_2021_03_07_20_42.txt  e_Score_679571_2021_03_07_20_26.txt
practice_round_2021/: solution.cpp
practice_round_2021/output/: b_output.txt  c_output.txt  d_output.txt  e_output.txt
src/: car.cpp  car.hpp  fwd.hpp  intersection.cpp  intersection.hpp  main.cpp  model.cpp  model.hpp  result.cpp  result.hpp  simulator.cpp  simulator.hpp  solution.cpp  solution.hpp  street.cpp  street.hpp  traffic_light.cpp  traffic_light.hpp
(+12 files in other folders)
